<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GestionarLibroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_gestionlibros"
        android:textColor="#456543"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!--Parte Grafica para el titulo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:text="@string/str_titulo"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ges_texto_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="24sp"
            android:hint="@string/str_escribirtitulo"
            android:inputType="text" />
    </LinearLayout>

    <!--Parte Grafica para el subtitulo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:text="@string/str_subtitulo"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ges_texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="24sp"
            android:hint="@string/str_escribirsubtitulo"
            android:inputType="text" />
    </LinearLayout>

    <!--Parte Grafica para el autor-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:text="@string/str_autor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ges_texto_autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="24sp"
            android:hint="@string/str_escribirautor"
            android:inputType="text" />
    </LinearLayout>

    <!--Parte Grafica para el isbn-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:text="@string/str_isbn"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ges_texto_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="24sp"
            android:hint="@string/str_escribirisbn"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <!--Parte Grafica para el anio publicacion-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:text="@string/str_anio_publicacion"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ges_texto_anio_publicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="24sp"
            android:hint="@string/str_escribiranio_publicacion"
            android:inputType="text" />
    </LinearLayout>

    <!--Parte Grafica para el precio-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:text="@string/str_precio"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ges_texto_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="24sp"
            android:hint="@string/str_escribirprecio"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ge_btnguardar"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btnGuardar"
            android:layout_marginHorizontal="10dp"
            android:onClick="onClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ge_btnactualizar"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btnactualizar"
            android:layout_marginHorizontal="10dp"
            android:onClick="onClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ge_btnborrar"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btnborrar"
            android:layout_marginHorizontal="10dp"
            android:onClick="onClick"/>

    </LinearLayout>

</LinearLayout>